fix(dashboard): align notification icon with timestamp
- fix icon alignment in notification panel
- refine layout and selector usage

(cherry picked from commit 7ddc88d2201b254ca5f0d9a18f28cc904a8c9614)

--- a/src/pybind/mgr/dashboard/frontend/src/app/core/navigation/notification-panel/notification-area/notification-area.component.scss
+++ b/src/pybind/mgr/dashboard/frontend/src/app/core/navigation/notification-panel/notification-area/notification-area.component.scss
@@ -85,6 +85,10 @@
   align-items: flex-start;
   position: relative;
 
+  > cd-icon {
+    margin-top: -$spacing-03;
+  }
+
   .notification-close {
     position: absolute;
     right: 0;
